updating appveyor.yml

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,9 +12,11 @@ environment:
     - nodejs_version: "10.14.0"
     - nodejs_version: "11.3.0"
 
-#init:
-#  - cmd: powershell >-
-#      $app = Get-WmiObject -Class Win32_Product -Filter """Vendor = 'Node.js Foundation'"""
+init:
+  - cmd: powershell >-
+      $app = Get-WmiObject -Class Win32_Product -Filter """Vendor = 'Node.js Foundation'"""
+
+      $app.Uninstall()
 #
 #      if ($app) {
 #        $app.Uninstall()
