--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,10 +13,10 @@ environment:
     - nodejs_version: "11.3.0"
 
 init:
-  - cmd: powershell >-
-      $app = Get-WmiObject -Class Win32_Product -Filter """Vendor = 'Node.js Foundation'"""
-
-      $app.Uninstall()
+#  - cmd: powershell >-
+#      $app = Get-WmiObject -Class Win32_Product -Filter """Vendor = 'Node.js Foundation'"""
+#
+#      $app.Uninstall()
 #
 #      if ($app) {
 #        $app.Uninstall()
@@ -29,6 +29,7 @@ install:
   #- cmd: SET PATH=%AppData%\nvm;%PATH%
   #- cmd: nvm.exe install $env:nodejs_version 64
   #- cmd: nvm.exe use $env:nodejs_version 64
+  - cmd: choco list --local-only
   - cmd: powershell Install-Product node $env:nodejs_version x64
   - sh: sudo apt-get -qq update
   - sh: sudo apt-get -y -qq install build-essential libgconf-2-4 python libglib2.0-dev
