--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,8 +13,12 @@ environment:
     - nodejs_version: "11.3.0"
 
 init:
-#  - cmd: powershell >-
-#      $app = Get-WmiObject -Class Win32_Product -Filter """Vendor = 'Node.js Foundation'"""
+  - cmd: powershell >-
+      $app = Get-WmiObject -Class Win32_Product -Filter """Vendor = 'Node.js Foundation'"""
+      $app2 = Get-WmiObject -Class Win32_Product -Filter """Name = 'Node.js'"""
+
+      Write-Host $app
+      Write-Host $app2
 #
 #      $app.Uninstall()
 #
