--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,18 +12,6 @@ environment:
     - nodejs_version: "10.14.0"
     - nodejs_version: "11.3.0"
 
-init:
-  - cmd: powershell $app = Get-WmiObject -Class Win32_Product -Filter """Vendor = 'Node.js Foundation'"""
-  - cmd: powershell Write-Host $app
-  - cmd: powershell $app.Uninstall()
-
-#
-#      $app.Uninstall()
-#
-#      if ($app) {
-#        $app.Uninstall()
-#      }
-
 install:
   #- cmd: powershell wget -UseBasicParsing https://github.com/coreybutler/nvm-windows/releases/download/1.1.7/nvm-setup.zip -OutFile nvm-setup.zip
   #- cmd: powershell Expand-Archive -Path nvm-setup.zip -DestinationPath .
@@ -31,6 +19,7 @@ install:
   #- cmd: SET PATH=%AppData%\nvm;%PATH%
   #- cmd: nvm.exe install $env:nodejs_version 64
   #- cmd: nvm.exe use $env:nodejs_version 64
+  - cmd: powershell Get-InstalledNodeJsVersion
   - cmd: powershell Install-Product node $env:nodejs_version x64
   - sh: sudo apt-get -qq update
   - sh: sudo apt-get -y -qq install build-essential libgconf-2-4 python libglib2.0-dev
