--- a/appveyor.yml
+++ b/appveyor.yml
@@ -19,9 +19,9 @@ install:
   #- cmd: SET PATH=%AppData%\nvm;%PATH%
   #- cmd: nvm.exe install $env:nodejs_version 64
   #- cmd: nvm.exe use $env:nodejs_version 64
-  - cmd: powershell $nodeInstall = Get-InstalledNodeJsVersion
-  - cmd: powershell WriteHost $nodeInstall["""version"""] $nodeInstall["""bitness"""]
-  - cmd: powershell Remove-NodeJsInstallation $nodeInstall["""version"""] $nodeInstall["""bitness"""]
+  - cmd: powershell Get-InstalledNodeJsVersion
+  - cmd: powershell Write-Host Get-InstalledNodeJsVersion["""version"""] Get-InstalledNodeJsVersion["""bitness"""]
+  - cmd: powershell Remove-NodeJsInstallation Get-InstalledNodeJsVersion["""version"""] Get-InstalledNodeJsVersion["""bitness"""]
   - cmd: powershell Start-NodeJsInstallation $env:nodejs_version x64
   # - cmd: powershell Install-Product node $env:nodejs_version x64
   - sh: sudo apt-get -qq update
