--- a/test/test.csproj
+++ b/test/test.csproj
@@ -15,6 +15,7 @@
   <ItemGroup>
     <ProjectReference Include="..\src\double\Edge.js\Edge.js.csproj" />
     <ProjectReference Include="..\src\double\Edge.js.CSharp\Edge.js.CSharp.csproj" />
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="2.3.2" />
     <!--<PackageReference Include="Edge.js.CSharp" Version="1.2.0" />-->
     <PackageReference Include="System.AppContext" Version="4.3.0" />
     <PackageReference Include="System.Collections.Specialized" Version="4.3.0" />
