--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "license": "Apache-2.0",
   "dependencies": {
     "edge-cs": "1.2.1",
+    "follow-redirects": "^1.13.0",
     "nan": "^2.14.0"
   },
   "devDependencies": {
