removing node 15 from appveyor.yml

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,7 +5,7 @@ image:
 environment:
   matrix:
     # node.js
-    - nodejs: "15"
+    # - nodejs: "15"
     - nodejs: "14"
     - nodejs: "12"
     - nodejs: "10"
