--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,11 +5,9 @@ image:
 environment:
   matrix:
     # node.js
-    # - nodejs: "15"
+    - nodejs: "16"
     - nodejs: "14"
     - nodejs: "12"
-    # yargs requires NodeJs >= 12
-    #- nodejs: "10"
 
 install:
   - cmd: powershell Update-NodeJsInstallation (Get-NodeJsLatestBuild $env:nodejs) x64
