adding macOS builds to AppVeyor, binding.gyp warnings cleanup, recompiling with new macOS targets

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,19 +1,21 @@
 image:
   - Visual Studio 2015
-  - Ubuntu2004
+  - Ubuntu2204
+  - macos-monterey
 
 environment:
   matrix:
     # node.js
-    - nodejs: "20"
-    - nodejs: "18"
     - nodejs: "16"
+    - nodejs: "18"
+    - nodejs: "20"
 
 install:
+  - sh: if [ "$APPVEYOR_BUILD_WORKER_IMAGE" = 'Ubuntu2204' ]; then sudo apt-get -qq update && sudo apt-get -y -qq install build-essential libgconf-2-4 python3 libglib2.0-dev; fi
   - cmd: powershell Update-NodeJsInstallation (Get-NodeJsLatestBuild $env:nodejs) x64
-  - sh: sudo apt-get -qq update
-  - sh: sudo apt-get -y -qq install build-essential libgconf-2-4 python libglib2.0-dev
+  - sh: nvm ls
   - sh: nvm install $nodejs
+  - sh: nvm use $nodejs
   - node -p "[process.version,process.arch].join(' ')"
   - dotnet --version
   - npm install -q
