--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,7 +15,7 @@ install:
   - ps: Write-Host "Downloading .NET Core 7 SDK..."
   - ps: (New-Object System.Net.WebClient).DownloadFile('https://download.visualstudio.microsoft.com/download/pr/f2ec926e-0d98-4a8b-8c70-722ccc2ca0e5/b59941b0c60f16421679baafdb7e9338/dotnet-sdk-7.0.407-win-x64.exe','dotnet-core-sdk.exe')
   - ps: Write-Host "Installing .NET Core SDK..."
-  - ps: Invoke-Command -ScriptBlock { ./dotnet-core-sdk.exe /S /v/qn }
+  - ps: Invoke-Command -ScriptBlock { dotnet-core-sdk.exe /S /v/qn }
   - cmd: powershell Update-NodeJsInstallation (Get-NodeJsLatestBuild $env:nodejs) x64
   - sh: nvm ls
   - sh: nvm install $nodejs
