--- a/package.json
+++ b/package.json
@@ -56,6 +56,6 @@
   },
   "scripts": {
     "install": "node tools/install.js",
-    "test": "node --expose-gc tools/test.js"
+    "test": "node tools/test.js"
   }
 }
