--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,28 +10,11 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [windows-2019]
-#        os: [macos-latest, ubuntu-latest, windows-2019]
+        os: [macos-latest, ubuntu-latest, windows-2019]
       fail-fast: false
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-
-      # - if: runner.os == 'Windows'
-      #   name: testing variables
-      #   run: |
-      #     echo "EDGE_USE_CORECLR=1" | Out-File -FilePath $env:GITHUB_ENV -Append
-      #     echo "${{ env.EDGE_USE_CORECLR }}"
-      #     echo "EDGE_USE_CORECLR=" | Out-File -FilePath $env:GITHUB_ENV -Append
-      #     echo "${{ env.EDGE_USE_CORECLR }}"
-      #     SET EDGE_USE_CORECLR=1
-      #     echo "${{ env.EDGE_USE_CORECLR }}"
-      - if: runner.os == 'Windows'
-        name: testing variables
-        env:
-          EDGE_USE_CORECLR: 1 # required to setup CSC
-        run: |
-          echo "${{ env.EDGE_USE_CORECLR }}"
 
       - name: Setup NodeJS
         uses: actions/setup-node@v2
@@ -53,31 +36,16 @@ jobs:
           sudo rm -rf /Library/Frameworks/Mono.framework
           sudo pkgutil --forget com.xamarin.mono-MDK.pkg
           sudo rm /etc/paths.d/mono-commands
-      
-  
-      - if: runner.os == 'Windows'
-        name: Install Windows dependencies
+ 
+      - name: npm install
         run: npm i
-      - if: runner.os == 'Linux'
-        name: Install Linux dependencies
-        run: EDGE_USE_CORECLR=1 npm i
-      - if: runner.os == 'macOS'
-        name: Install macOS dependencies
-        run: EDGE_USE_CORECLR=1 npm i
 
       - if: runner.os == 'Windows'
-        name: Run Windows tests
-        run: |
-          npm test
-          echo "EDGE_USE_CORECLR=1" | Out-File -FilePath $env:GITHUB_ENV -Append
-          echo "${{ env.EDGE_USE_CORECLR }}"
-          npm test
-      # - if: runner.os == 'Linux'
-      #   name: Run Linux tests
-      #   run: EDGE_USE_CORECLR=1 npm test
-      # - if: runner.os == 'macOS'
-      #   name: Run macOS tests
-      #   run: EDGE_USE_CORECLR=1 npm test
-      - if: ${{ (runner.os == 'Linux') || (runner.os == 'macOS') }}
-        name: Run tests
-        run: EDGE_USE_CORECLR=1 npm test
+        name: Run .NET 4.x tests
+        run: npm test
+
+      - name: "Run .net core tests"
+        env:
+          EDGE_USE_CORECLR: 1
+        run: npm test
+
