--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -61,7 +61,7 @@ jobs:
       - name: Test Report
         uses: dorny/test-reporter@v1
         with:
-          name: Test results (${{ matrix.os }})-@${{ matrix.node }}  # Name of the check run which will be created
+          name: Test results (${{ matrix.os }}, ${{ matrix.node }})  # Name of the check run which will be created
           path: test-results.xml   # Path to test results
           reporter: jest-junit     # Format of test results          
 
