--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,6 +18,11 @@ executors:
 
 jobs:
   setup:
+    parameters:
+      os:
+        type: executor
+      node-version:
+        type: string
     executor: linux
     steps:
       - run: wget https://packages.microsoft.com/config/ubuntu/22.04/packages-microsoft-prod.deb -O packages-microsoft-prod.deb
